--- a/what_is_the_liturgy_of_the_hours.html
+++ b/what_is_the_liturgy_of_the_hours.html
@@ -171,7 +171,7 @@
         <a class="link-secondary" href="#">Subscribe</a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Cantus Ex Corde</a>
+        <a class="blog-header-logo text-body-emphasis text-decoration-none" href="index.html">Cantus Ex Corde</a>
         <p class="text-body-emphasis">Chanting the Liturgy from the Heart</p>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
@@ -288,7 +288,8 @@
 </main>
 
 <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>&#8483; Ora pro nobis, sancta Dei Genetrix.</p>
+  <p>&#8479; Ut digni efficiamur promissionibus Christi.</p>
   <p class="mb-0">
     <a href="#">Back to top</a>
   </p>
